--- a/templates/wikipage.html
+++ b/templates/wikipage.html
@@ -2,42 +2,9 @@
 <html>
 	<head>
 		<title>{{title}}</title>
-		<style ="text/css">
-		body {
-			font-family: sans-serif;
-			width: 800px;
-			margin: 0 auto;
-			padding: 10px;
-			position: relative;
-		}
-		
-		.error {
-			color: red
-		}
-		
-		label {
-			display: block;
-			font-size: 20px;
-		}
-		
-		input[type=text] {
-			width: 400px;
-			height: 20px;
-			padding: 2px;
-		}
-		
-		.page_editor {
-			width: 760px;
-			height: 400px;
-			font-size:17px;
-			font-family: monospace;
-		}
-		.toolbar {
-			position: relative;
-			left: 620px;
-			color: gray;
-		}
-	</style>
+		<link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="../css/bootsrap-responsive.css" rel="stylesheet">
+		<script src="../js/bootstrap.js"></script>
 	</head>
 	<body>
 		{{toolbar|safe}}
