--- a/templates/signup2.html
+++ b/templates/signup2.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 	
     <style type="text/css">
       body {
@@ -48,8 +48,8 @@
 	  }
 
     </style>
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
-	<script src="js/bootstrap.js"></script>
+    <link href="../css/bootstrap-responsive.css" rel="stylesheet">
+	<script src="../js/bootstrap.js"></script>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -106,16 +106,16 @@
 	
     <div class="container">
 
-      <form class="form-signin">
+      <form class="form-signin" method="post">
         <h2 class="form-signin-heading" >Signup for miniWiki</h2>
 		<p class="text-warning">{{uerror}}</p>
-        <input type="text" class="input-block-level" placeholder="Username">
+        <input type="text" class="input-block-level" name="username" placeholder="Username" value="{{username}}">
 		<p class="text-warning">{{perror}}</p>
-        <input type="password" class="input-block-level" placeholder="Password">
+        <input type="password" class="input-block-level" name="password" placeholder="Password">
 		<p class="text-warning">{{verror}}</p>
-		<input type="password" class="input-block-level" placeholder="Verify Password">
+		<input type="password" class="input-block-level" name="verify" placeholder="Verify Password">
 		<p class="text-warning">{{eerror}}</p>
-		<input type="text" class="input-block-level" placeholder="Email (optional)">
+		<input type="text" class="input-block-level" name="email" placeholder="Email (optional)" value="{{email}}">
 		
         
         <button class="btn btn-large btn-primary" type="submit">Signup</button>
