--- a/templates/editpage.html
+++ b/templates/editpage.html
@@ -1,53 +1,84 @@
-<DOCTYPE=html>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>{{title}}</title>
-	</head>
-	<style ="text/css">
-		body {
-			font-family: sans-serif;
-			width: 800px;
-			margin: 0 auto;
-			padding: 10px;
-			position: relative;
-		}
-		
-		.error {
-			color: red
-		}
-		
-		label {
-			display: block;
-			font-size: 20px;
-		}
-		
-		input[type=text] {
-			width: 400px;
-			height: 20px;
-			padding: 2px;
-		}
-		
-		.page_editor {
-			width: 760px;
-			height: 400px;
-			font-size:17px;
-			font-family: monospace;
-		}
-		.toolbar {
-			position: relative;
-			left: 620px;
-			color: gray;
-		}
-	</style>
-	<body>
-		{{toolbar|safe}}
+  <head>
+    <title>{{title}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <!-- Bootstrap -->
+	<link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+    </style>
+	
+	<link href="../css/bootstrap-responsive.css" rel="stylesheet">
+	<link href="../css/myown.css" rel="stylesheet">
+	
+  </head>
+  <body>
+	
+	{{toolbar|safe}}
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+			
+          </button>
+          <a class="brand" href="#">miniWiki</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li class="active"><a href="#contact">Manage</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lessons <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider"></li>
+                  <li class="nav-header">Nav header</li>
+                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+            <form class="navbar-form pull-right">
+              <input class="span2" type="text" placeholder="Email">
+              <input class="span2" type="password" placeholder="Password">
+              <button type="submit" class="btn">Sign in</button>
+            </form>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+	
+	    <div class="container">
+
+      <!-- Main hero unit for a primary marketing message or call to action -->
+      <div class="hero-unit">
+        <h1>HTML!</h1>
+		<br>
 		<form method="post">
-			<label>
-				<div>Enter HTML here to be saved to this page url:</div>
-				<textarea class="page_editor" name="content">{{page_html}}</textarea>
-			</label>
-			<div class="error">{{error}}</div>
-			<input type="submit">
+			<p><input type="text" class="span4" placeholder="Page Title" > </p>
+			<p><textarea class="htmlinput span10" name="content">{{page_html}} </textarea> </p>
+			<p><button type="submit" class="btn btn-large btn-primary" >Submit &raquo;</button></p>
+			<p class="text-error">{{error}}</p>
 		</form>
-	</body>
+      </div>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Company 2013</p>
+      </footer>
+
+    </div> <!-- /container -->
+	
+	
+  </body>
 </html>
