--- a/templates/login.html
+++ b/templates/login.html
@@ -1,77 +1,128 @@
+
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Chocolate, Yum!!!</title>
-		<style ="text/css">
-		body {
-			font-family: sans-serif;
-			width: 800px;
-			margin: 0 auto;
-			padding: 10px;
-			position: relative;
-		}
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Login &middot; minWiki</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <link href="../css/bootstrap.css" rel="stylesheet">
+	
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+      }
+
+      .form-signin {
 		
-		.error {
-			color: red
-		}
-		
-		label {
-			display: block;
-			font-size: 20px;
-		}
-		
-		input[type=text] {
-			width: 400px;
-			height: 20px;
-			padding: 2px;
-		}
-		
-		.page_editor {
-			width: 760px;
-			height: 400px;
-			font-size:17px;
-			font-family: monospace;
-		}
-		.toolbar {
-			position: relative;
-			right: 0px;
-			color: gray;
-		}
-	</style>
-	</head>
-<body>
-	<h2>Signup for the Wiki!</h2>
-	<form method="post">
-		<table class="loginTable" border="10px">
-			<tr>
-				<td class="label">
-				Username
-				</td>
-				<td>
-					<input type="text" name="username" value="{{username}}">
-				</td>
-				
-			</tr>
-			<tr>
-				<td class="label">
-				Password
-				</td>
-				<td>
-					<input type="password" name="password">
-				</td>
-				
-			</tr>
-			<tr>
-				<td>
-				<input type="submit" value="Submit">
-				</td>
-				<td class="error">
-				{{error}}
-				</td>
-			</tr>
-		</table>
-		
+        max-width: 340px;
+        padding: 19px 29px 29px;
+        margin: 0 auto 20px;
+        background-color: #fff;
+        border: 1px solid #e5e5e5;
+        -webkit-border-radius: 5px;
+           -moz-border-radius: 5px;
+                border-radius: 5px;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+                box-shadow: 0 1px 2px rgba(0,0,0,.05);
+      }
+      .form-signin .form-signin-heading,
+      .form-signin .checkbox {
+        margin-bottom: 10px;
+      }
+      .form-signin input[type="text"],
+      .form-signin input[type="password"] {
+        font-size: 16px;
+        height: auto;
+        margin-bottom: 15px;
+        padding: 7px 9px;
+      }
+	  .hidden {
+		display:none;
+	  }
+
+    </style>
+    <link href="../css/bootstrap-responsive.css" rel="stylesheet">
+	<script src="../js/bootstrap.js"></script>
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="../assets/js/html5shiv.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
+  </head>
+
+  <body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
 			
-	</form>
-</body>
+          </button>
+          <a class="brand" href="#">miniWiki</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li class="active"><a href="#contact">Manage</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lessons <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider"></li>
+                  <li class="nav-header">Nav header</li>
+                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+            <form class="navbar-form pull-right">
+              <input class="span2" type="text" placeholder="Email">
+              <input class="span2" type="password" placeholder="Password">
+              <button type="submit" class="btn">Sign in</button>
+            </form>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+	
+	
+    <div class="container">
+
+      <form class="form-signin" method="post">
+        <h2 class="form-signin-heading" >Login into miniWiki</h2>
+		<p class="text-warning">{{error}}</p>
+        <input type="text" class="input-block-level" name="username" placeholder="Username" value="{{username}}">
+		<p class="text-warning">{{perror}}</p>
+		
+        <input type="password" class="input-block-level" name="password" placeholder="Password">
+        <button class="btn btn-large btn-primary" type="submit">Login</button>
+      </form>
+
+    </div> <!-- /container -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+	<script src="../js/jquery-1.10.1.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
+
+  </body>
 </html>
