--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,46 +1,70 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Wiki Signup</title>
-		<style ="text/css">
-		body {
-			font-family: sans-serif;
-			width: 800px;
-			margin: 0 auto;
-			padding: 10px;
-			position: relative;
-		}
-		
-		.error {
-			color: red
-		}
-		
-		label {
-			display: block;
-			font-size: 20px;
-		}
-		
-		input[type=text] {
-			width: 400px;
-			height: 20px;
-			padding: 2px;
-		}
-		
-		.page_editor {
-			width: 760px;
-			height: 400px;
-			font-size:17px;
-			font-family: monospace;
-		}
-		.toolbar {
-			position: relative;
-			right: 0px;
-			color: gray;
-		}
-	</style>
-	</head>
-<body>
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Signup &middot; minWiki</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <link href="../css/bootstrap.css" rel="stylesheet">
+	
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+      }
+
+      .form-signin {
+		
+        max-width: 340px;
+        padding: 19px 29px 29px;
+        margin: 0 auto 20px;
+        background-color: #fff;
+        border: 1px solid #e5e5e5;
+        -webkit-border-radius: 5px;
+           -moz-border-radius: 5px;
+                border-radius: 5px;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+                box-shadow: 0 1px 2px rgba(0,0,0,.05);
+      }
+      .form-signin .form-signin-heading,
+      .form-signin .checkbox {
+        margin-bottom: 10px;
+      }
+      .form-signin input[type="text"],
+      .form-signin input[type="password"] {
+        font-size: 16px;
+        height: auto;
+        margin-bottom: 15px;
+        padding: 7px 9px;
+      }
+	  .hidden {
+		display:none;
+	  }
+
+    </style>
+    <link href="../css/bootstrap-responsive.css" rel="stylesheet">
+
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="../assets/js/html5shiv.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
+  </head>
+
+  <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -50,7 +74,7 @@
             <span class="icon-bar"></span>
 			
           </button>
-          <a class="brand" href="#">Japanese Benkyou</a>
+          <a class="brand" href="#">miniWiki</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="#">Home</a></li>
@@ -79,62 +103,31 @@
       </div>
     </div>
 	
-	<h2>Make an account for the super-simple Wiki:</h2>
-	<p>Already have an account? <a href="/login">Login</a>
-	<form method="post">
-		<table class="loginTable" border="10px">
-			<tr>
-				<td class="label">
-				Username
-				</td>
-				<td>
-					<input type="text" name="username" value="{{username}}">
-				</td>
-				<td class="error">
-				{{uerror}}
-				</td>
-			</tr>
-			<tr>
-				<td class="label">
-				Password
-				</td>
-				<td>
-					<input type="password" name="password">
-				</td>
-				<td class="error">
-				{{perror}}
-				</td>
-			</tr>
-			<tr>
-				<td class="label">
-				Verify Password
-				</td>
-				<td>
-					<input type="password" name="verify">
-				</td>
-				<td class="error">
-				{{verror}}
-				</td>
-			</tr>
-			<tr>
-				<td class="label">
-				Email (optional)
-				</td>
-				<td>
-					<input type="text" name="email" value="{{email}}">
-				</td>
-				<td class="error">
-				{{eerror}}
-				</td>
-			</tr>
-			<tr>
-				<td>
-				<input type="submit" value="Submit">
-				</td>
-			</tr>
-		</table>
+	
+    <div class="container">
+
+      <form class="form-signin" method="post">
+        <h2 class="form-signin-heading" >Signup for miniWiki</h2>
+		<p class="text-warning">{{uerror}}</p>
+        <input type="text" class="input-block-level" name="username" placeholder="Username" value="{{username}}">
+		<p class="text-warning">{{perror}}</p>
+        <input type="password" class="input-block-level" name="password" placeholder="Password">
+		<p class="text-warning">{{verror}}</p>
+		<input type="password" class="input-block-level" name="verify" placeholder="Verify Password">
+		<p class="text-warning">{{eerror}}</p>
+		<input type="text" class="input-block-level" name="email" placeholder="Email (optional)" value="{{email}}">
 		
-			
-	</form>
-</body>
+        
+        <button class="btn btn-large btn-primary" type="submit">Signup</button>
+      </form>
+
+    </div> <!-- /container -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+	<script src="../js/jquery-1.10.1.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
+
+  </body>
 </html>
