--- a/templates/wikipage.html
+++ b/templates/wikipage.html
@@ -4,12 +4,56 @@
 		<title>{{title}}</title>
 		<link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link href="../css/bootsrap-responsive.css" rel="stylesheet">
-		<script src="../js/bootstrap.js"></script>
 	</head>
 	<body>
+	    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+			
+          </button>
+          <a class="brand" href="#">miniWiki</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li class="active"><a href="#contact">Manage</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lessons <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider"></li>
+                  <li class="nav-header">Nav header</li>
+                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+            <form class="navbar-form pull-right">
+              <input class="span2" type="text" placeholder="Email">
+              <input class="span2" type="password" placeholder="Password">
+              <button type="submit" class="btn">Sign in</button>
+            </form>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+	<br><br><br>
 		{{toolbar|safe}}
 		<br>
 		{{page_html|safe}}
-	
+		
+		
+		
+		<!-- Le javascript
+		================================================== -->
+		<!-- Placed at the end of the document so the pages load faster -->
+		<script src="../js/jquery-1.10.1.js"></script>
+		<script src="../js/bootstrap.min.js"></script>
 	</body>
 </html>
